--- a/Fancy-SAI-Editor/MainWindow.xaml
+++ b/Fancy-SAI-Editor/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="NodeAI.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="NodeAI" Height="1000" Width="1400">
+        Title="NodeAI" Height="1000" Width="1400" LayoutUpdated="Window_LayoutUpdated">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="17.96"/>
