Implemented auto positioning system - WIP - Horizontal alignment done

--- a/Fancy-SAI-Editor/MainWindow.xaml
+++ b/Fancy-SAI-Editor/MainWindow.xaml
@@ -10,6 +10,7 @@
         </Grid.RowDefinitions>
         <Menu>
             <MenuItem Header="File">
+                <MenuItem Header="Position nodes" Click="HandlePositionNodes"/>
                 <MenuItem Header="Exit" />
             </MenuItem>
             <MenuItem Header="Export">
