First step for reworking the complete node management system - WIP
* Created new singleton class 'NodeManager' which handles everything with interactions between nodes
* Moved everything which correlates with node interaction from MainWindow to NodeManager
   -> MainWindow should only initialize everything and handle certain events
* The new positioning system is planed with trees. Every node is content of a tree and these trees contains nodes connected to each other.

--- a/Fancy-SAI-Editor/MainWindow.xaml
+++ b/Fancy-SAI-Editor/MainWindow.xaml
@@ -14,7 +14,7 @@
                 <MenuItem Header="Exit" />
             </MenuItem>
             <MenuItem Header="Export">
-                <MenuItem Header="Export to SQL" Click="ExportToSql"/>
+                <MenuItem Header="Export to SQL" Click="HandleMenu_ExportToSql"/>
             </MenuItem>
         </Menu>
         <ScrollViewer x:Name="NodeEditorScrollViewer" HorizontalScrollBarVisibility="Visible" Grid.Row="1" CanContentScroll="True" PreviewMouseWheel="NodeEditorScrollViewer_PreviewMouseWheel">
