Implemented new node drag system

--- a/Fancy-SAI-Editor/Node.xaml
+++ b/Fancy-SAI-Editor/Node.xaml
@@ -7,7 +7,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="200" d:DesignWidth="200">
     <Border x:Name="NodeSelectionBorder" BorderBrush="LightSkyBlue" BorderThickness="1">
-        <Border Background="#FF2D2D2D" BorderBrush="Black" BorderThickness="2" CornerRadius="15"  MouseMove="OnMouseMove" MouseLeftButtonDown="OnLeftMouseDown">
+        <Border Background="#FF2D2D2D" BorderBrush="Black" BorderThickness="2" CornerRadius="15"  MouseMove="OnMouseMove" MouseLeftButtonDown="OnLeftMouseDown" MouseLeftButtonUp="OnLeftMouseUp">
             <StackPanel>
                 <Label x:Name="NodeName" HorizontalAlignment="Center" Foreground="White" Background="{x:Null}" FontSize="15" FontWeight="Bold">Noname</Label>
                 <Grid Margin="0,5,0,10">
