--- a/Fancy-SAI-Editor/SAIImport.xaml
+++ b/Fancy-SAI-Editor/SAIImport.xaml
@@ -5,13 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:NodeAI"
         mc:Ignorable="d"
-        Title="SAIImport" Height="300" Width="300">
+        Title="SAIImport" Height="100" Width="300">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <TextBox x:Name="entry"/>
-        <Button Content="Import" Click="Button_Click" Grid.Row="1"/>
+        <TextBox x:Name="entry" HorizontalAlignment="Center" VerticalAlignment="Center" PreviewTextInput="entry_PreviewTextInput" MinWidth ="158" MaxWidth="158"/>
+        <Button Content="Import" Click="Button_Click" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="60,2"/>
     </Grid>
 </Window>
