--- a/Fancy-SAI-Editor/DataWindow.xaml
+++ b/Fancy-SAI-Editor/DataWindow.xaml
@@ -3,6 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         xmlns:local="clr-namespace:NodeAI"
         mc:Ignorable="d"
         Title="DatabaseSelectorWindow" Width="370" MaxHeight="550" ResizeMode="NoResize">
