--- a/Fancy-SAI-Editor/SAIImport.xaml
+++ b/Fancy-SAI-Editor/SAIImport.xaml
@@ -1,8 +1,9 @@
-﻿<Window x:Class="NodeAI.SAIImport"
+﻿<Controls:MetroWindow x:Class="NodeAI.SAIImport"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         xmlns:local="clr-namespace:NodeAI"
         mc:Ignorable="d"
         Title="SAIImport" Height="100" Width="300">
@@ -14,4 +15,4 @@
         <TextBox x:Name="entry" HorizontalAlignment="Center" VerticalAlignment="Center" PreviewTextInput="entry_PreviewTextInput" MinWidth ="158" MaxWidth="158" KeyDown="entry_KeyDown"/>
         <Button Content="Import" Click="Button_Click" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="60,2"/>
     </Grid>
-</Window>
+</Controls:MetroWindow>
