--- a/Fancy-SAI-Editor/SelectMysqlDatabase.xaml
+++ b/Fancy-SAI-Editor/SelectMysqlDatabase.xaml
@@ -1,8 +1,9 @@
-﻿<Window x:Class="NodeAI.SelectMysqlDatabase"
+﻿<Controls:MetroWindow x:Class="NodeAI.SelectMysqlDatabase"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         xmlns:local="clr-namespace:NodeAI"
         mc:Ignorable="d"
         Title="SelectMysqlDatabase" Height="300" Width="320">
@@ -44,4 +45,4 @@
             <Button Content="Exit" Width="75" Height="23" Margin="4,0" Click="Exit_Click"/>
         </StackPanel>
     </Grid>
-</Window>
+</Controls:MetroWindow>
