--- a/Fancy-SAI-Editor/ShowSqlExport.xaml
+++ b/Fancy-SAI-Editor/ShowSqlExport.xaml
@@ -1,8 +1,9 @@
-﻿<Window x:Class="NodeAI.ShowSqlExport"
+﻿<Controls:MetroWindow x:Class="NodeAI.ShowSqlExport"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         xmlns:local="clr-namespace:NodeAI"
         mc:Ignorable="d"
         Title="ShowSqlExport" Height="300" Width="600">
@@ -14,4 +15,4 @@
         <TextBox IsReadOnly="True" x:Name="ExportText" Margin="5,8,5,0" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto"/>
         <Button Height="23" Width="75" Content="Close" Grid.Row="1" HorizontalAlignment="Right" Margin="0,5,8,5" VerticalAlignment="Bottom" Click="Button_Click"/>
     </Grid>
-</Window>
+</Controls:MetroWindow>
